[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "synthesize"
version = "0.0.5"
description = "A flexible concurrent command runner."
authors = ["Josh Karpel <josh.karpel@gmail.com>"]
readme = "README.md"
homepage="https://github.com/JoshKarpel/synthesize"
repository="https://github.com/JoshKarpel/synthesize"
documentation="https://www.synth.how"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
license = "MIT"
include = ["py.typed"]

[tool.poetry.dependencies]
python = ">=3.10,<4"  # required by openapi-pydantic
pydantic = ">=2"
rich = ">=13.3"
typer = ">=0.7"
click = ">=8.1"
pyyaml = ">=6.0"
networkx = ">=3.0"
watchfiles = ">=0.18"
identify = ">=2.5"
jinja2 = ">=3.1"
more-itertools = ">=10.3"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3"
pytest = ">=7"
pytest-cov = ">=3"
pytest-asyncio = ">=0.20"
pytest-mock = ">=3"
hypothesis = ">=6"
mypy = ">=1"
types-pyyaml = ">=6"
mkdocs = ">=1.4"
mkdocs-material = ">=9"
mkdocstrings = {extras = ["python"], version = ">=0.19.0"}
openapi-pydantic = ">=0.4"

[tool.poetry.scripts]
synth = 'synthesize.cli:cli'

[tool.black]
line-length = 100
include = "\\.pyi?$"

[tool.pytest.ini_options]
addopts = ["--strict-markers", "-v"]
testpaths = ["tests", "synthesize", "docs"]

markers = ["slow"]

asyncio_mode = "auto"

[tool.mypy]
pretty = false
show_error_codes = true

files = ["."]

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true

warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_redundant_casts = true

ignore_missing_imports = true

plugins = "pydantic.mypy"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I",   # https://beta.ruff.rs/docs/rules/#isort-i
    "F",   # https://beta.ruff.rs/docs/rules/#pyflakes-f
    "E",   # https://beta.ruff.rs/docs/rules/#error-e
    "W",   # https://beta.ruff.rs/docs/rules/#warning-w
    "T20", # https://beta.ruff.rs/docs/rules/#flake8-print-t20
    "PIE", # https://beta.ruff.rs/docs/rules/#flake8-pie-pie
    "PLC", # https://beta.ruff.rs/docs/rules/#convention-plc
    "PLE", # https://beta.ruff.rs/docs/rules/#error-ple
    "PLW", # https://beta.ruff.rs/docs/rules/#warning-plw
    "PTH", # https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
    "PGH", # https://beta.ruff.rs/docs/rules/#pygrep-hooks-pgh
    "RUF", # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
]

ignore = [
    "E501",   # line length exceeds limit
    "E741",   # ambiguous variable name
    "T201",   # print
    "T203",   # pprint
    "F403",   # star imports, used for utilities
    "F405",   # star imports, used for utilities
    "RUF012", # pydantic allows mutable class attributes
]
